--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@atpar/ap-contracts": "^0.3.0-beta.0",
     "@atpar/ap.js": "^0.3.0-beta.0",
     "cli-spinner": "^0.2.10",
+    "eth-sig-util": "^2.5.3",
     "web3": "1.2.4"
   }
 }
