--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "author": "Joe Bernitt <j.b5286@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
-    "generate-wallet": "node scripts/generateWallet.js; node scripts/printAddresses.js",
-    "print-wallet": "node scripts/printAddresses.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "@atpar/ap-contracts": "^0.3.0-beta.0",
     "@atpar/ap.js": "^0.3.0-beta.0",
+    "@truffle/hdwallet-provider": "^1.0.35",
     "cli-spinner": "^0.2.10",
     "eth-sig-util": "^2.5.3",
     "web3": "1.2.4"
