--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@atpar/ap-contracts": "^0.4.3",
-    "@atpar/ap.js": "^0.4.3",
+    "@atpar/protocol": "0.0.1-alpha.0",
     "@truffle/hdwallet-provider": "^1.0.35",
     "cli-spinner": "^0.2.10",
     "eth-sig-util": "^2.5.3",
+    "ethers": "^5.0.18",
     "ganache-cli": "^6.10.1",
     "truffle": "^5.1.41",
     "web3": "1.2.4"
