--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
   "scripts": {
     "start:chain": "./scripts/startChain.sh",
     "deploy": "./deployContracts.sh",
-    "start": "node index.js"
+    "start": "ts-node index.ts"
   },
   "dependencies": {
     "@atpar/protocol": "0.0.1-alpha.5",
-    "@truffle/hdwallet-provider": "^1.0.35",
-    "cli-spinner": "^0.2.10",
-    "eth-sig-util": "^2.5.3",
-    "ganache-cli": "^6.10.1",
-    "truffle": "^5.1.41",
     "web3": "1.2.4"
+  },
+  "devDependencies": {
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   }
 }
